# crazy-flask-chat-app

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py
api/: index.py
api/templates/: chat.html
crazy-flask-chat-app/: server.py
crazy-flask-chat-app/static/: style.css
crazy-flask-chat-app/templates/: chat.html  index.html
static/: style.css
templates/: chat.html  index.html
