[project]
name = "crazy-flask-chat-app"
version = "0.0.1"
description = "Crazy simple, yet robust super chat web app with Flask"
authors = [{name = "amooo-ooo",email = "amor.budiyanto2006@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
    "flask-socketio (>=5.5.1,<6.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
